# agentic-search

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  todo.txt
src/agentic_search/: __main__.py  api.py  config.py  extract.py  pipeline.py  scrape.py  search.py  serve.py
